2004-03-12  Kenichi Handa  <handa@etlken2>

	* input-gui.c (win_create_ic): Enable bidi in status control.

	* draw.c (visual_order): Avoid re-ordering only combining glyphs.

2004-03-09  Kenichi Handa  <handa@m17n.org>

	* input.c (load_input_method): If title is not specified, use the
	input method name as title.

	* m17n-X.c (get_color): Make it static.
	(xim_create_ic, xim_destroy_ic, x_error_handler)
	(x_io_error_handler): Likewise.

2004-03-01  Kenichi Handa  <handa@m17n.org>

	* Version 1.0 released.


Copyright (C) 2003, 2004
  National Institute of Advanced Industrial Science and Technology (AIST)
  Registration Number H15PRO112

This file is part of the m17n library.

The m17n library is free software; you can redistribute it and/or
modify it under the terms of the GNU Lesser General Public License
as published by the Free Software Foundation; either version 2.1 of
the License, or (at your option) any later version.

The m17n library is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
Lesser General Public License for more details.

You should have received a copy of the GNU Lesser General Public
License along with the m17n library; if not, write to the Free
Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
02111-1307, USA.